2017-02-07

	* libsylph/prefs_account.[ch]
	  src/compose.[ch]
	  src/prefs_account_dialog.c
	  src/prefs_ui.[ch]: implemented multiple signatures in one account.

2017-02-02

	* libsylph/ssl.c: supported the location of SSL certificates on
	  OpenBSD (thanks to Amit Kulkarni) (#222).

2017-02-02

	* libsylph/utils.c: execute_open_file(): unix: implemented using
	  xdg-open.
	  src/mainwindow.c: added the following menus:
	  /Tools/Open configuration folder
	  /Tools/Open attachments folder

2017-02-02

	* nsis/COPYING.ja.txt
	  nsis/COPYING.txt
	  nsis/english.nsh
	  nsis/japanese.nsh
	  nsis/spanish.nsh
	  nsis/sylpheed-defs.nsh
	  nsis/sylpheed.nsi: updated NSIS scripts:
	  - Show notice about not removing user data before uninstall
	  - Add autoenc plugin definition
	  - Update license text

2016-07-29

	* version 3.5.1

2016-07-29

	* INSTALL
	  INSTALL.ja
	  PLUGIN.txt
	  PLUGIN.ja.txt
	  README
	  README.ja: updated.

2016-07-19

	* src/compose.c
	  src/plugin.[ch]: added new plug-in signal "compose-attach-changed".

2016-07-13

	* src/compose.c: compose_get_attach_list(): return NULL if the
	  attachment list is closed.

2016-07-07

	* src/plugin.h: add two more functions.
	* src/libsylpheed-plugin-0.def: updated.

2016-06-17

	* src/main.c
	  src/plugin.[ch]
	  src/plugin-types.h: syl_plugin_get_attach_list(): added new plug-in
	  function. Extra struct types are separeted into plugin-types.h.

2016-06-17

	* src/compose.[ch]: compose_get_attach_list(): added.

2016-06-17

	* src/compose.c
	  src/mainwindow.c: emit toolbar changed signals.

2016-06-17

	* autogen.sh
	  config.rpath
	  ltmain.sh
	  missing: updated version.

2016-06-17

	* src/main.c
	  src/plugin.[ch]: added new plug-in functions and signals.

2016-06-17

	* src/compose.[ch]:
	  added new public fuctions:
	    compose_get_toolbar()
	    compose_get_misc_hbox()
	    compose_get_textview()
	    compose_attach_append()
	    compose_attach_remove_all()
	    compose_send()