@@ -1,3 +1,8 @@
+2017-02-10
+
+	* src/editgroup.c: replaced GTKCList with GtkTreeView and also
+	  enabled multiple selection.
+
 2017-02-07
 
 	* libsylph/prefs_account.[ch]
